Bug fixes. Implement REFUND payment

--- a/src/main/resources/org/killbill/billing/plugin/notification/templates/PaymentRefund.mustache
+++ b/src/main/resources/org/killbill/billing/plugin/notification/templates/PaymentRefund.mustache
@@ -1,6 +1,6 @@
 *** Your payment has been refunded ***
 
-We have processed a refund in the amount of {{TODO}}.
+We have processed a refund in the amount of {{payment.currency}} {{payment.amount}}.
 
 This refund will appear on your next credit card statement in approximately 3-5 business days.
 
