generator: introduce convenient formatted values
Introduce formatted* variables that can be used in the
templates to properly display an amount with its currency.

This should fix https://github.com/killbill/killbill-email-notifications-plugin/issues/3.

Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>

--- a/src/main/resources/org/killbill/billing/plugin/notification/templates/UpcomingInvoice.mustache
+++ b/src/main/resources/org/killbill/billing/plugin/notification/templates/UpcomingInvoice.mustache
@@ -3,10 +3,10 @@
 You have a new invoice from {{text.merchantName}}, due on {{invoice.targetDate}}.
 
 {{#invoice.invoiceItems}}
-{{startDate}} {{planName}} : {{invoice.currency}} {{amount}}
+{{startDate}} {{planName}} : {{formattedAmount}}
 {{/invoice.invoiceItems}}
 
-{{text.invoiceAmountTotal}}: {{invoice.balance}}
+{{text.invoiceAmountTotal}}: {{invoice.formattedBalance}}
 
 {{text.billedTo}}:
 {{account.companyName}}
