--- a/src/main/resources/org/killbill/billing/plugin/notification/templates/FailedPayment.mustache
+++ b/src/main/resources/org/killbill/billing/plugin/notification/templates/FailedPayment.mustache
@@ -6,11 +6,11 @@ Here are the details of your declined payment:
 {{text.paymentDate}}: {{invoice.invoiceDate}}
 
 {{#invoice.invoiceItems}}
-{{startDate}} {{planName}} : {{invoice.currency}} {{amount}}
+{{startDate}} {{planName}} : {{formattedAmount}}
 {{/invoice.invoiceItems}}
 
-{{text.invoiceAmountPaid}}:  {{invoice.paidAmount}}
-{{text.invoiceAmountTotal}}: {{invoice.balance}}
+{{text.invoiceAmountPaid}}:  {{invoice.formattedPaidAmount}}
+{{text.invoiceAmountTotal}}: {{invoice.formattedBalance}}
 
 
 {{text.billedTo}}:
