Add Tygrys-specific email notification customization

--- a/src/main/resources/org/killbill/billing/plugin/notification/templates/InvoiceCreation.mustache
+++ b/src/main/resources/org/killbill/billing/plugin/notification/templates/InvoiceCreation.mustache
@@ -24,6 +24,7 @@
                         <td></td>
                         <td>
                             {{text.invoiceTitle}} {{text.invoicePrefix}}{{invoice.invoiceNumber}}<br>
+                            Subscription: {{subscriptionName}}<br>
                             {{text.invoiceDate}}{{invoice.formattedInvoiceDate}}
                         </td>
                     </tr>
